<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="bugreport_title">User Feedback</string>
    <string name="projector_settings">Projector Settings</string>
    <string name="light_settings">Brightness Settings</string>
    <string name="flip_settings">Projection Settings</string>
    <string name="auto_setting_keystone">Automaitc Keystone</string>
    <string name="manual_setting_keystone">Manual Keystone</string>
    <string name="system_net_update">System net update</string>
    <string name="system_local_update">System local update</string>
    <string name="system_local_update_msg">Please select the firmware to upgrade!</string>
    <string name="system_local_update_select">Select</string>
    <string name="file_info" msgid="9148789767199785676">"can't find a U disk"</string>
	  <string name="permlab_showUI">Show UI for firmware update.</string>
	  <string name="permdesc_shwoUI">Show UI for firmware update.</string>
	  <string name="updating_title">Firmware Updating</string>
	  <string name="updating_message_formate">A update package file is found : \'%1$s\'. Would you like to install the package?</string>
	  <string name="updating_button_install">Install</string>
	  <string name="updating_button_cancel">Cancel</string>
	  <string name="updating_prompt">Checking the package! The Device is going to reboot...</string>
	  <string name="updating_prompt_sdcard">Do NOT remove SD card from the device!</string>
	  <string name="IFIA_title">Invalid firmware image</string>
	  <string name="IFIA_msg">Found an invalid firmware image file \'%1$s\'. Would you like to delete it?</string>
	  <string name="IFIA_btn_yes">Yes</string>
	  <string name="IFIA_btn_no">No</string>
	  <string name="NIA_title">No update image file</string>
	  <string name="NIA_msg_format">There is no firmware image file in directory \'%1$s\' and \'%2$s\'!</string>
	  <string name="NIA_btn_ok">OK</string>
	  <string name="ask_delete_package">Do you want to delete the file? If not,the system may propose this update again.</string>
	  <string name="update_success">Congratulation upgrade succeed!</string>
	  <string name="update_failed">Firmware update failed!</string>
	  <string name="state_idle">State: Idle</string>
	  <string name="downloading">Downloading</string>
	  <string name="ota_update">Find a OTA upgrade package! do you want to update? </string>
	  <string name="ota_package_size">, size:</string>
	  <string name="start">Start</string>
	  <string name="starting">Starting</string>
	  <string name="retry">Retry</string>
	  <string name="pause">Pause</string>
	  <string name="stoping">Stoping</string>
	  <string name="cancel_update">Cancel Download</string>
	  <string name="auto_check">Auto check update</string>
	  <string name="check_now">Check now</string>
	  <string name="pb_title_downloading">Upgrade package is being downloaded</string>
	  <string name="pb_title_pause">Upgrade package is being paused</string>
	  <string name="remain_time">Remaining Time:</string>
	  <string name="current_new">The current version is the latest!</string>
	  <string name="error_display">Network error, please try again later!</string>
	  <string name="product_model">Product Model:</string>
	  <string name="current_version">Current Version:</string>
	<string name="no_button">Cancel</string>
	<string name="ok_button">Save</string>
	<string name="wifi_ssid">Network name</string>
	<string name="wifi_ssid_hint">Enter the SSID</string>
	<string name="wifi_security">Security</string>
	<string name="wifi_password">Password</string>
	<string name="wifi_show_password">Show password</string>
	<string name="credentials_password_too_short">The password must have at least 8 characters.</string>
	<string name="wifi_ap_band_config">Select AP Band</string>
	<string name="wifi_tether_configure_subtext"><xliff:g id="network_ssid">%1$s</xliff:g> <xliff:g id="network_security">%2$s</xliff:g> portable Wi\u2011Fi hotspot</string>
	<string name="bluetooth_turning_on">"Turning Bluetooth on\u2026"</string>
	<string name="positive_button">OK</string>
	<string name="nagetive_button">NO</string>
	<string name="usb_tethering_active_subtext">Tethered</string>
	<string name="usb_tethering_available_subtext">USB connected, check to tether</string>
	<string name="usb_tethering_errored_subtext">USB tethering error</string>
	<string name="usb_tethering_storage_active_subtext">Can\u2019t tether when USB storage is in use</string>
	<string name="usb_tethering_unavailable_subtext">USB not connected</string>
	<string name="bluetooth_turning_off">"Turning Bluetooth off\u2026"</string>
    <string name="bluetooth_tethering_off_subtext" product="default">Not sharing this phone\u2019s Internet connection</string>
    <string name="bluetooth_tethering_available_subtext" product="default">Sharing this phone\u2019s Internet connection</string>
	<string name="bluetooth_tethering_errored_subtext">Not tethered</string>
    <string name="bluetooth_tethering_devices_connected_subtext" product="default">Sharing this phone\u2019s Internet connection to <xliff:g id="connectedDeviceCount">%1$d</xliff:g> devices</string>
    <string name="bluetooth_tethering_device_connected_subtext" product="default">Sharing this phone\u2019s Internet connection to 1 device</string>
	<string name="wifi_tether_enabled_subtext">Portable hotspot <xliff:g id="network_ssid">%1$s</xliff:g> active</string>
	<string name="wifi_error">Error</string>
	<string name="wifi_tether_starting">Turning hotspot on\u2026</string>
	<string name="wifi_tether_stopping">Turning off hotspot\u2026</string>
	<string name="wifi_sap_no_channel_error">5 GHz band not available in this country</string>
	<string name="wifi_ap_choose_2G">2.4 GHz Band</string>
	<string name="wifi_ap_choose_5G">5 GHz Band</string>
	<string name="wifi_save">Save</string>
	<string name="wifi_cancel">Cancel</string>
    <string name="settings_app_name">Settings</string>
    <string name="hotpot_name">HotPot</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
	<string name="usb_tethering_button_text">USB tethering</string>
	<string name="wifi_tether_checkbox_text">Portable Wi\u2011Fi hotspot</string>
	<string name="wifi_tether_configure_ap_text">Set up Wi\u2011Fi hotspot</string>
	<string name="bluetooth_tether_checkbox_text">Bluetooth tethering</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="accounts_category_title">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_network">Network</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Apps</string>
    <string name="device_storage_reset">Storage &amp; reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="apps_downloaded">Downloaded apps</string>
    <string name="apps_system">System apps</string>
    <string name="apps_running">Running apps</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_home">Home screen</string>
    <string name="about_model">Model</string>
    <string name="about_version">Version</string>
    <string name="display_category_title">Display</string>
    <string name="more_settings">More Settings</string>
    <string name="bluetooth">Bluetooth</string>
</resources>