<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/system_ota_update_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="28.0sp" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40.0dip"
        android:gravity="center">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:singleLine="true"
	        android:text="@string/about_model"
	        android:textSize="22.0sp" />
        
        <TextView
	        android:id="@+id/local_current_model"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginLeft="10dp"
	        android:text="@string/about_model"
	        android:singleLine="true"
	        android:textSize="22.0sp" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:gravity="center"
	        android:singleLine="true"
	        android:text="@string/about_version"
	        android:textSize="22.0sp" />
        
        <TextView
	        android:id="@+id/local_current_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginLeft="10dp"
	        android:text="@string/about_version"
	        android:singleLine="true"
	        android:textSize="22.0sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/local_update_info"
        android:layout_width="500.0dip"
        android:layout_height="200.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/update_not_display"
        android:gravity="center"
        android:paddingBottom="5.0dip"
        android:paddingLeft="5.0dip"
        android:paddingTop="5.0dip"
        android:scrollbarSize="5.0dip"
        android:scrollbars="vertical"
        android:text="@string/system_local_update_msg"
        android:singleLine="false"
        android:textColor="#cccccccc"
        android:textSize="18.0sp" />

    <Button
        android:id="@+id/local_immediate"
        android:layout_width="157.0dip"
        android:layout_height="65.0dip"
        android:layout_marginTop="20.0dip"
        android:text="@string/system_local_update_select"
       	android:background="@drawable/button_selector"
        android:textColor="#ffffffff"
        android:textSize="24.0sp" />

</LinearLayout>